<resources>
    <string name="app_name">RealPG</string>
    <string name="tab_text_1">Personaje</string>
    <string name="tab_text_2">Actividades</string>
    <string name="tab_text_3">Estadísticas</string>
    <string name="catStatsTitle">Tus estadísticas</string>
    <string name="topActivitiesTitle">Top actividades</string>
    <string name="top1Activity">Top1 activity</string>
    <string name="top2Activity">Top2 activity</string>
    <string name="top3Activity">Top3 activity</string>
    <string name="top1ActivityTime">5d 4h y 53mins</string>
    <string name="top2ActivityTime">1d 11h y 12 mins</string>
    <string name="top3ActivityTime">23h y 50mins</string>
    <string name="noLatestText">No hay actividades recientes.</string>
    <string name="newPokeText">¡Selecciona un pokémon!</string>
    <string name="hoursPerCatTitle">Horas por categoria</string>
    <string name="categoryTitle">Category Title</string>
    <string name="activityInfoHeader">Activity Name</string>
    <string name="activityCategoryTitle">Categoría</string>
    <string name="activityCategory">Categoria X</string>
    <string name="semanaTitle">Semana</string>
    <string name="mesTitle">Mes</string>
    <string name="añoTitle">Año</string>
    <string name="totalTitle">Total</string>
    <string name="timeSpent">XXd YYh ZZmin</string>
    <string name="delete">Eliminar</string>
    <string name="stopWatch">00:00:00</string>
    <string name="siguiente">Siguiente</string>
    <string name="anterior">Anterior</string>
    <string name="comenzar">Comenzar</string>
    <string name="confirmar">Confirmar</string>
    <string name="activitiesOfCategory">Actividades de la categoria</string>
    <string name="cadapoke">Cada pokemon cuesta 10 💎</string>
    <string name="noActMsg">No hay actividades</string>
    <string name="Bienestar">Bienestar</string>
    <string name="Casa">Casa</string>
    <string name="Deporte">Deporte</string>
    <string name="Estudios">Estudios</string>
    <string name="Ocio">Ocio</string>
    <string name="Otros">Otros</string>
    <string name="Proyectos">Proyectos</string>
    <string name="Trabajo">Trabajo</string>
    <string name="Viajes">Viajes</string>
    <string name="prevDiamondHave">Tienes: </string>
    <string name="seleccionar">Seleccionar</string>
    <string name="actividadesRecientes">Actividades recientes</string>
    <string name="subtitleApp">El rpg de tu vida</string>
    <string name="bienvenidoA">Bienvenido a</string>
    <string name="introAct1">Crea actividades que realices a diario y mide cuanto tiempo les dedicas</string>
    <string name="introAct2">Revisa estadísticas sobre las actividades que realizas para aprender a organizarte mejor</string>
    <string name="introPoke1">Sube de nivel y evoluciona a tus pokemon realizando tus actividades</string>
    <string name="introPoke2">Consigue diamantes por cada nivel que subas y obtén nuevos pokemon</string>
    <string name="introComenzar">Comencemos por elegir cual sera tu primer pokemon</string>
    <string name="introElegir">Elige cual sera tu primer pokemon entre estos 4</string>
    <string name="introElegirSubInfo">(Los pokemon pueden tardar en cargar)</string>
    <string name="myPokes">Mis pokemon</string>
    <string name="createActTitle">Crear una nueva actividad</string>
    <string name="selectCatTitle">Selecciona una categoria</string>
    <string name="nameOfActTitle">Nombre de la actividad</string>
    <string name="prevHasObtained">Has obtenido </string>
    <string name="warningNoName">Debes indicar un nombre para la nueva Actividad</string>
    <string name="newActOk">Actividad creada con exito</string>
    <string name="warningFirstPoke">Selecciona primero el pokemon que quieras obtener</string>
    <string name="noInternet">Sin conexión a internet</string>
    <string name="cronoNotiTitle">Cronometro funcionando</string>
    <string name="cronoNotiTextPrev">Tienes un cronometro activo sobre </string>
    <string name="undoDelete">Deshacer borrado</string>
</resources>